# stand_bot

./: .env-template  .gitignore  Makefile  docker-compose.yml  manage.py
Docker/stand_bot/: Dockerfile  docker-entrypoint.sh
backend/: Makefile  pyproject.toml
backend/stand_bot/: settings.py  urls.py  wsgi.py
backend/stand_bot/schedule/: apps.py  models.py
backend/stand_bot/schedule/management/commands/: telegram_bot.py
backend/stand_bot/schedule/migrations/: 0001_initial.py  0002_initial.py
backend/stand_bot/user/: models.py
stand_bot/: asgi.py  settings.py
stand_bot/schedule/: admin.py
stand_bot/user/: apps.py
stand_bot/user/migrations/: 0001_initial.py
